--- a/css/style.css
+++ b/css/style.css
@@ -1,3 +1,4 @@
+@import './variable.css';
 @import url('https://fonts.googleapis.com/css?family=Segoe+UI:400,700&display=swap');
 
 @import './layout.css';
