--- a/css/form.css
+++ b/css/form.css
@@ -1,45 +1,93 @@
-.atlas-form {
+.messageBox {
     position: fixed;
     left: 50%;
-    bottom: 0;
+    bottom: 10px;
+    top: unset;
     transform: translateX(-50%);
-    z-index: 10000;
-    max-width: var(--form-max-width);
-    width: 100%;
-    margin: 0 auto;
-    display: flex;
-    gap: var(--form-gap);
-    padding: var(--form-padding);
-    background: var(--form-bg);
-    border-radius: var(--form-radius);
-    border: var(--form-border);
-    margin-bottom: 25px;
-}
-
-#prompt {
-    flex: 1;
-    padding: 12px;
-    border: var(--form-border);
-    border-radius: var(--form-btn-radius);
-    font-size: 1.1rem;
-    background: var(--form-input-bg);
-    color: var(--form-input-color);
-}
-
-button[type="submit"] {
-    padding: 0 22px;
-    background: var(--form-btn-bg);
-    color: var(--form-btn-color);
-    border: none;
-    border-radius: var(--form-btn-radius);
-    font-size: 1.3rem;
-    cursor: pointer;
-    transition: background 0.2s;
+    z-index: 1000;
+    width: fit-content;
+    height: 50px; /* ajusté pour correspondre à la marge dans .atlas-messages */
     display: flex;
     align-items: center;
     justify-content: center;
+    background-color: #2d2d2d;
+    padding: 0 15px;
+    border-radius: 10px;
+    border: 1px solid rgb(63, 63, 63);
 }
 
-button[type="submit"]:hover {
-    background: var(--form-btn-bg-hover);
+.messageBox:focus-within {
+  border: 1px solid rgb(110, 110, 110);
+}
+
+.fileUploadWrapper {
+  width: fit-content;
+  height: 100%;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  font-family: 'Inter', Arial, Helvetica, sans-serif;
+}
+
+#file {
+  display: none;
+}
+
+.tooltip {
+  position: absolute;
+  top: -40px;
+  display: none;
+  opacity: 0;
+  color: white;
+  font-size: 10px;
+  text-wrap: nowrap;
+  background-color: #000;
+  padding: 6px 10px;
+  border: 1px solid #3c3c3c;
+  border-radius: 5px;
+  box-shadow: 0px 5px 10px rgba(0, 0, 0, 0.596);
+  transition: all 0.3s;
+}
+
+#messageInput {
+  width: 200px;
+  height: 100%;
+  background-color: transparent;
+  outline: none;
+  border: none;
+  padding-left: 10px;
+  color: white;
+}
+
+#messageInput:focus ~ #sendButton svg path,
+#messageInput:valid ~ #sendButton svg path {
+  fill: #3c3c3c;
+  stroke: white;
+}
+
+#sendButton {
+  width: fit-content;
+  height: 100%;
+  background-color: transparent;
+  outline: none;
+  border: none;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  cursor: pointer;
+  transition: all 0.3s;
+}
+
+#sendButton svg {
+  height: 18px;
+  transition: all 0.3s;
+}
+
+#sendButton svg path {
+  transition: all 0.3s;
+}
+
+#sendButton:hover svg path {
+  fill: #3c3c3c;
+  stroke: white;
 }
