--- a/css/style.css
+++ b/css/style.css
@@ -1,4 +1,5 @@
 @import './variable.css';
+@import url('https://fonts.googleapis.com/css2?family=Inter:wght@400;700&display=swap');
 @import url('https://fonts.googleapis.com/css?family=Segoe+UI:400,700&display=swap');
 
 @import './layout.css';
