--- a/css/layout.css
+++ b/css/layout.css
@@ -10,7 +10,20 @@ body {
     margin: 0;
     padding: 0;
     display: flex;
+}
+
+.app-layout {
+    display: flex;
+    width: 100%;
+    height: 100%;
+}
+
+.main-content {
+    flex-grow: 1;
+    display: flex;
     flex-direction: column;
+    height: 100vh;
+    overflow: hidden;
 }
 
 .chat-container {
