--- a/css/layout.css
+++ b/css/layout.css
@@ -26,7 +26,7 @@ body {
     overflow: hidden;
 }
 
-.chat-container {
+.session-container {
     display: flex;
     flex-direction: column;
     height: 100%;
