--- a/css/style.css
+++ b/css/style.css
@@ -3,7 +3,7 @@
 @import url('https://fonts.googleapis.com/css?family=Segoe+UI:400,700&display=swap');
 
 @import './layout.css';
-@import './chat.css';
+@import './session.css';
 @import './form.css';
 @import './toast.css';
 @import './sidebar.css';
