--- a/styles/styles.css
+++ b/styles/styles.css
@@ -9,3 +9,4 @@
 @import url('components/scrollbar.css');
 @import url('components/modal.css');
 @import url('components/session.css');
+@import url('components/code.css');
