--- a/styles/components/code.css
+++ b/styles/components/code.css
@@ -7,7 +7,7 @@
   display: flex;
   justify-content: space-between;
   align-items: center;
-  background-color: #343a40;
+  background-color: #000;
   padding: 0.5rem 1rem;
   border-top-left-radius: var(--border-radius);
   border-top-right-radius: var(--border-radius);
@@ -50,7 +50,7 @@
 
 .message-bubble pre {
   /* Use highlight.js background but keep our container style */
-  background: #000000;
+  background-color: #000;
   padding: 1rem;
   border-bottom-left-radius: var(--border-radius);
   border-bottom-right-radius: var(--border-radius);
